# Docc

./: .gitignore  CMakeLists.txt  README.md  docc.py  setup.py
core/: CMakeLists.txt
core/include/core/: engine.h  window.h
core/src/: engine.cc
src/: main.cc
